--- a/form/index.html
+++ b/form/index.html
@@ -11,37 +11,39 @@
 </head>
 <center><body>
     <div>
+        <h1>Cadastro</h1>
         <button class="btn" id="btnNome"> Digite seu nome </button>
-        <input type="text" id="txtNome" val="" class="input">
+        <input type="text" id="txtNome" value="" class="input">
         <br>
 
         <button class="btn" id="btnSobrenome"> Digite seu sobrenome </button>
-        <input type="text" id="txtSobrenome" val="" class="input">
+        <input type="text" id="txtSobrenome" value="" class="input">
         <br>
 
         <button class="btn" id="btnIdade"> Digite sua idade </button>
-        <input type="text" id="txtIdade" val="" class="input">
+        <input type="text" id="txtIdade" value="" class="input">
         <br>
 
         <button class="btn" id="btnCPF"> Digite seu CPF </button>
-        <input type="text" id="txtCPF" val="" class="input">
+        <input type="text" id="txtCPF" value="" class="input">
         <br>
 
         <button class="btn" id="btnTelefone"> Digite seu telefone </button>
-        <input type="text" id="txtTelefone" val="" class="input">
+        <input type="text" id="txtTelefone" value="" class="input">
         <br>
 
         <button class="btn" id="btnEmail"> Digite seu email </button>
-        <input type="text" id="txtEmail" val="" class="input">
+        <input type="text" id="txtEmail" value="" class="input">
         <br>
 
         <button class="btn" id="btnCidade"> Escolha sua cidade </button>
         <select name="cidade" id="cmbCidade">
-            <option value="0">Mauá</option>
-            <option value="1">Ribeirão Pires</option>
-            <option value="2">Rio Grande da Serra</option>
-            <option value="3">Santo André</option>
-            <option value="4">São Bernardo do Campo</option>
+            <option value="">Selecione</option>
+            <option value="Mauá">Mauá</option>
+            <option value="Ribeirão Pires">Ribeirão Pires</option>
+            <option value="Rio Grande da Serra">Rio Grande da Serra</option>
+            <option value="Santo André">Santo André</option>
+            <option value="São Bernardo do Campo">São Bernardo do Campo</option>
         </select>
         <br>
 
